{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 1259,
  "lineage": "07dd1851-110a-a732-d528-21162a6f711a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0059b8437b14d568f",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-159-202.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.159.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08180335808bdb5e4",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-9-255-86.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.255.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d874727b19377f",
            "arn": "arn:aws:ec2:eu-west-2:565143587686:instance/i-0ea4fbfea717ba1bc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea4fbfea717ba1bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b57838a86993cd51",
            "private_dns": "ip-172-16-2-22.eu-west-2.compute.internal",
            "private_ip": "172.16.2.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3357e6e53d09fb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e323870f53d5336",
            "tags": {
              "Name": "nexus0"
            },
            "tags_all": {
              "Name": "nexus0",
              "student": "atimonin"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-011c36a99b14fdb89"
            ]
          },
          "dependencies": [
            "aws_efs_mount_target.nexus_mount_target",
            "aws_security_group.nexus_efs_sg",
            "aws_security_group.nexus_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nexus_ami",
            "data.aws_availability_zones.az",
            "data.aws_efs_file_system.nexus_efs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d874727b19377f",
            "arn": "arn:aws:ec2:eu-west-2:565143587686:instance/i-01660d61d99d815a5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01660d61d99d815a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e738a16f4ca48a69",
            "private_dns": "ip-172-16-3-153.eu-west-2.compute.internal",
            "private_ip": "172.16.3.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5f4fd11012ac04d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5b5ce61375f8e6e",
            "tags": {
              "Name": "nexus1"
            },
            "tags_all": {
              "Name": "nexus1",
              "student": "atimonin"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e1a93f7a0579405a"
            ]
          },
          "dependencies": [
            "aws_efs_mount_target.nexus_mount_target",
            "aws_instance.nexus0",
            "aws_security_group.nexus_efs_sg",
            "aws_security_group.nexus_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nexus_ami",
            "data.aws_availability_zones.az",
            "data.aws_efs_file_system.nexus_efs",
            "null_resource.stop_nexus0",
            "time_sleep.wait_nexus0_settle"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:internet-gateway/igw-07feccbf3f9e12636",
            "id": "igw-07feccbf3f9e12636",
            "owner_id": "565143587686",
            "tags_all": {
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nexus_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:loadbalancer/app/nexus-lb/02f8ab1e9fb6160a",
            "arn_suffix": "app/nexus-lb/02f8ab1e9fb6160a",
            "dns_name": "nexus-lb-1611390183.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:loadbalancer/app/nexus-lb/02f8ab1e9fb6160a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nexus-lb",
            "security_groups": [
              "sg-04bb5e85fadf97076"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ac9bc30702d6fc9e"
              },
              {
                "subnet_id": "subnet-0d6eac0ef65eb48f1"
              }
            ],
            "subnets": [
              "subnet-0ac9bc30702d6fc9e",
              "subnet-0d6eac0ef65eb48f1"
            ],
            "tags": {
              "project": "gridu-aws-practice"
            },
            "tags_all": {
              "project": "gridu-aws-practice",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nexus_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:listener/app/nexus-lb/02f8ab1e9fb6160a/9fe299567bb4f514",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:listener/app/nexus-lb/02f8ab1e9fb6160a/9fe299567bb4f514",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:loadbalancer/app/nexus-lb/02f8ab1e9fb6160a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nexus_lb",
            "aws_lb_target_group.nexus_targets",
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nexus_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88",
            "arn_suffix": "targetgroup/nexus-lb-taget-group/13cd81f26b44cf88",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/service/rest/v1/status",
                "port": "8081",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nexus-lb-taget-group",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "gridu-aws-practice"
            },
            "tags_all": {
              "project": "gridu-aws-practice",
              "student": "atimonin"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nexus0_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88-20211018102341144900000001",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88",
            "target_id": "i-0ea4fbfea717ba1bc"
          },
          "dependencies": [
            "aws_efs_mount_target.nexus_mount_target",
            "aws_instance.nexus0",
            "aws_lb_target_group.nexus_targets",
            "aws_security_group.nexus_efs_sg",
            "aws_security_group.nexus_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nexus_ami",
            "data.aws_availability_zones.az",
            "data.aws_efs_file_system.nexus_efs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nexus1_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88-20211018102749024500000002",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:565143587686:targetgroup/nexus-lb-taget-group/13cd81f26b44cf88",
            "target_id": "i-01660d61d99d815a5"
          },
          "dependencies": [
            "aws_efs_mount_target.nexus_mount_target",
            "aws_instance.nexus0",
            "aws_instance.nexus1",
            "aws_lb_target_group.nexus_targets",
            "aws_security_group.nexus_efs_sg",
            "aws_security_group.nexus_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nexus_ami",
            "data.aws_availability_zones.az",
            "data.aws_efs_file_system.nexus_efs",
            "null_resource.stop_nexus0",
            "time_sleep.wait_nexus0_settle"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0059b8437b14d568f",
            "connectivity_type": "public",
            "id": "nat-02ee0e0bdfd3515e0",
            "network_interface_id": "eni-0b30d97bdd14edbbc",
            "private_ip": "172.16.0.28",
            "public_ip": "18.135.159.202",
            "subnet_id": "subnet-0d6eac0ef65eb48f1",
            "tags_all": {
              "student": "atimonin"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08180335808bdb5e4",
            "connectivity_type": "public",
            "id": "nat-0c3b240d29f181d1f",
            "network_interface_id": "eni-0b6a180a9454b7d9e",
            "private_ip": "172.16.1.249",
            "public_ip": "3.9.255.86",
            "subnet_id": "subnet-0ac9bc30702d6fc9e",
            "tags_all": {
              "student": "atimonin"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e09a6424afbabbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ee0e0bdfd3515e0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e09a6424afbabbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ec0771a201c533f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3b240d29f181d1f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ec0771a201c533f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07feccbf3f9e12636",
            "id": "r-rtb-0ae430f7ecddab3ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae430f7ecddab3ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:route-table/rtb-04e09a6424afbabbd",
            "id": "rtb-04e09a6424afbabbd",
            "owner_id": "565143587686",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nexus_private-0"
            },
            "tags_all": {
              "Name": "nexus_private-0",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:route-table/rtb-0ec0771a201c533f8",
            "id": "rtb-0ec0771a201c533f8",
            "owner_id": "565143587686",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nexus_private-1"
            },
            "tags_all": {
              "Name": "nexus_private-1",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:route-table/rtb-0ae430f7ecddab3ee",
            "id": "rtb-0ae430f7ecddab3ee",
            "owner_id": "565143587686",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nexus_public"
            },
            "tags_all": {
              "Name": "nexus_public",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f77e80080a846345",
            "route_table_id": "rtb-04e09a6424afbabbd",
            "subnet_id": "subnet-02e323870f53d5336"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a02b3282c8a2bf9",
            "route_table_id": "rtb-0ec0771a201c533f8",
            "subnet_id": "subnet-0e5b5ce61375f8e6e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bcab3b74b07e3cb",
            "route_table_id": "rtb-0ae430f7ecddab3ee",
            "subnet_id": "subnet-0d6eac0ef65eb48f1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037cb35adb6be704b",
            "route_table_id": "rtb-0ae430f7ecddab3ee",
            "subnet_id": "subnet-0ac9bc30702d6fc9e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-04bb5e85fadf97076",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bb5e85fadf97076",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nexus_lb_sg",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-0739c7fb46af1a9da",
            "description": "Allow inbound NFS from nexus and outbound any",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0739c7fb46af1a9da",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.2.0/24",
                  "172.16.3.0/24"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS_sg",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-011c36a99b14fdb89",
            "description": "Allow ssh to nexus and outbound to everywhere (for downloads)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011c36a99b14fdb89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/24"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "nexus_sg-0",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-0e1a93f7a0579405a",
            "description": "Allow ssh to nexus and outbound to everywhere (for downloads)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1a93f7a0579405a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "nexus_sg-1",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-0b5fa749216b546c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5fa749216b546c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nexus_vpn_sg",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:subnet/subnet-02e323870f53d5336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-02e323870f53d5336",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565143587686",
            "tags": {
              "Name": "nexus_private-0"
            },
            "tags_all": {
              "Name": "nexus_private-0",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:subnet/subnet-0e5b5ce61375f8e6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0e5b5ce61375f8e6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565143587686",
            "tags": {
              "Name": "nexus_private-1"
            },
            "tags_all": {
              "Name": "nexus_private-1",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:subnet/subnet-0d6eac0ef65eb48f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0d6eac0ef65eb48f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565143587686",
            "tags": {
              "Name": "nexus_public-0"
            },
            "tags_all": {
              "Name": "nexus_public-0",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:subnet/subnet-0ac9bc30702d6fc9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0ac9bc30702d6fc9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565143587686",
            "tags": {
              "Name": "nexus_public-1"
            },
            "tags_all": {
              "Name": "nexus_public-1",
              "student": "atimonin"
            },
            "vpc_id": "vpc-0f5ceeb41ce0b1b57"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:vpc/vpc-0f5ceeb41ce0b1b57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-04134756dac80b685",
            "default_route_table_id": "rtb-04248e02053919a07",
            "default_security_group_id": "sg-0c851459b0fb5aa2c",
            "dhcp_options_id": "dopt-1ba1a973",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f5ceeb41ce0b1b57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04248e02053919a07",
            "owner_id": "565143587686",
            "tags_all": {
              "student": "atimonin"
            }
          }
        }
      ]
    }
  ]
}